tekstide ja kategooriate lisamine

--- a/Elisabeth_Ellinorile_logo.html
+++ b/Elisabeth_Ellinorile_logo.html
@@ -62,18 +62,15 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 /2022 &nbsp;&nbsp; • &nbsp;&nbsp; </span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 /2022 &nbsp;&nbsp; • &nbsp;&nbsp; Firmagraafika </span>
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Visuaalne identiteet filmikunstnik Elisabeth Ellinorile</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülesanne oli kujundada logo/märk ja logoraamat filmikunstnik Elisabeth Ellinorile. Mina sain logo loomiseks
-                        inspiratsiooni ruunidest. Logo sümboolikas võtsin aluseks viikingi sümboli, mis tähendab “loo oma reaalsus”. Oma kujunduses lähtusin minimalismist ning erinevatest lihtsatest sümbolitest. 
-
-                        Kaks üles suunatud noolt tähendavad võitu ja kasvamist. Samas meenutavad need mägesid ja looduslähedust. 
-                        
-                        Nool kui sümbol viitab avatusele uutele kogemusele, tugevust, julgust, keskendumist ja kavalust ning võimet suhelda ja  liikuda vajadusel väga kiiresti. 
-                        
-                        Ring ümber viikingi sümboli näitab pidevat liikumist ja ühtlasi on ka päikese ning täiuslikkuse sümbol. Samas on ka ring harmoonia sümbol, mis rahustab ja tasakaalustab logo </p>
+                        <p>Ülesanne oli kujundada logo/märk ja logoraamat filmikunstnik Elisabeth Ellinorile. Mina sain logo loomiseks inspiratsiooni ruunidest. 
+                        Logo sümboolikas võtsin aluseks viikingi sümboli, mis tähendab “loo oma reaalsus”. Oma kujunduses lähtusin minimalismist ning erinevatest lihtsatest sümbolitest. 
+                        Kaks üles suunatud noolt tähendavad võitu ja kasvamist. Samas meenutavad need mägesid ja looduslähedust. Nool kui sümbol viitab avatusele uutele kogemusele, 
+                        tugevust, julgust, keskendumist ja kavalust ning võimet suhelda ja liikuda vajadusel väga kiiresti. Ring ümber viikingi sümboli näitab pidevat liikumist ja ühtlasi
+                         on ka päikese ning täiuslikkuse sümbol. Samas on ka ring harmoonia sümbol, mis rahustab ja tasakaalustab logo  </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
