--- a/cv_video.html
+++ b/cv_video.html
@@ -66,8 +66,9 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">CV video</video></h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülesanne oli vabalt valitud video põhjal teha animatsiooni klipp. Videoks valisin kolm meest, kes tantsivad ja
-                        animeerisin nende erinevaid tantsukombinatsioone.</p>
+                        <p>Ülessanne oli teha enda elulookirjelduse video, kus ma tuvustasi ennast ja kirjeldasin enda erialaseid oslusi. Videosse lisasin ka graafilisi elemente: 
+                            minu portfoolio QR koodiga ja teine oli milline peab olema hea kujundusgraafik. Animatsioonide tegemiseks ma kasutasin Adobe After Effetci.See oli minu 
+                            esimene kogemus selle programmigama, sain hea kogemuse kuidas teha animtsioone ja hiljem neid eksportida  Adobe Premiere Pro programmi. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
