--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -38,6 +38,35 @@ gtag('config', 'G-XXXXXXX');
 </script>
 
 </head>
+<body class="w-100">
+    <!-- start header -->
+    <header>
+        <!-- start navigation -->
+        <nav class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
+            <div class="container-fluid nav-header-container h-100px sm-h-70px">
+                <!-- start header navigation -->
+                <!-- <div class="col d-none d-md-block text-start ps-0">
+                            <div class="header-social-icon border-none no-padding-left no-margin-left">
+                                <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
+                            </div>
+                        </div> -->
+                <!-- start logo -->
+                <div class="col text-md-left pl-0 pl-md-3">
+                    <a class="logo" href="index.html"><img
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            class="default" alt="Oliver Juss"></a>
+                </div>
+                <!-- end logo -->
+    
+            </div>
+            <!-- End Header Navigation -->
+        </nav>
+        <!-- end navigation -->
+    </header>
+    <!-- end header -->
 
 
 <!-- start hero section -->
@@ -87,18 +116,19 @@ gtag('config', 'G-XXXXXXX');
                     class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
                     <li class="nav active"><a href="javascript:void(0);" data-filter="*"
                             class="light-gray-text-link text-very-small">Kõik</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".bänner"
-                            class="light-gray-text-link text-very-small">Ettevõtluspraktika/ Õpilasfirma</a></li>
                     <li class="nav"><a href="javascript:void(0);" data-filter=".õpilasfirma"
+                            class="light-gray-text-link text-very-small">Ettevõtluspraktika/ Õpilasfirma</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".firmagraafik"
                             class="light-gray-text-link text-very-small">Firmagraafika</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".firmagraafika"
-                            class="light-gray-text-link text-very-small">Logo</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".disain"
-                            class="light-gray-text-link text-very-small">Disain</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".trükis"
-                            class="light-gray-text-link text-very-small">Trükis</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine"
-                            class="light-gray-text-link text-very-small">Kooli tööd</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".trükiettevalmistus"
+                            class="light-gray-text-link text-very-small">Trükiettevalmistus</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".filmi_ja_videotöötlus"
+                            class="light-gray-text-link text-very-small">Filmi ja videotöötlus</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".tootefoto_ja_pilditöötlus"
+                            class="light-gray-text-link text-very-small">Tootefoto ja pilditöötlus</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".ajakiri"
+                            class="light-gray-text-link text-very-small">Ajakiri</a></li>
+                 
                 </ul>
                 <!-- end filter navigation -->
             </div>
@@ -111,7 +141,7 @@ gtag('config', 'G-XXXXXXX');
                     class="hover-option8 portfolio-wrapper grid grid-loading grid-4col xl-grid-4col lg-grid-2col md-grid-2col sm-grid-2col xs-grid-1col gutter-medium">
                     <li class="grid-sizer"></li>
                     <!-- start portfolio item -->
-                    <li class="grid-item wow animate__fadeInUp trükis disain hindamine">
+                    <li class="grid-item wow animate__fadeInUp ajakiri">
                         <a href="ajakiri.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -123,9 +153,8 @@ gtag('config', 'G-XXXXXXX');
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
                                                 class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Ametikooli
-                                                100</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
-                                                Disain</p>
+                                                100 ajakiri</span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Ajakiri</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -134,7 +163,7 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
-                    <li class="grid-item wow animate__fadeInUp bänner logo reklaam firmagraafika " data-wow-delay="0.2s">
+                    <li class="grid-item wow animate__fadeInUp bänner logo reklaam firmagraafik" data-wow-delay="0.2s">
                         <a href="Elisabeth_Ellinorile_logo.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -155,21 +184,20 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double logo Disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                    <li class="grid-item grid-item-double trükiettevalmistus wow animate__fadeInUp" data-wow-delay="0.4s">
                         <a href="minu_cvi.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647174618/Koduleht/orginaal_cvioliver_n7p6uu.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652974387/Koduleht/minu-logo_gadixb.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">
-                                                <Oliver Juss logo</span>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom"> Oliver Juss visuaalne identiteet </span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">
-                                                        Logo ja Disain</p>
+                                                        Trükiettevalmistus</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -178,7 +206,7 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double reklaam trükis wow animate__fadeInUp">
+                    <li class="grid-item grid-item-double filmi_ja_videotöötlus wow animate__fadeInUp">
                         <a href="kuressaare_reis.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -199,7 +227,7 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
+                    <li class="grid-item grid-item-double tootefoto_ja_pilditöötlus wow animate__fadeInUp" data-wow-delay="0.2s">
                         <a href="postkaard.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -211,8 +239,7 @@ gtag('config', 'G-XXXXXXX');
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
                                                 class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Akrokefaalia postkaard</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
-                                                Disain</p>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Tootefoto ja pilditöötlus</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -221,7 +248,7 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp"
+                    <li class="grid-item grid-item-double filmi_ja_videotöötlus wow animate__fadeInUp"
                         data-wow-delay="0.4s">
                         <a href="cv_video.html">
                             <figure>
@@ -244,7 +271,7 @@ gtag('config', 'G-XXXXXXX');
                     <!-- end portfolio item -->
 
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                    <li class="grid-item grid-item-double õpilasfirma animate__fadeInUp" data-wow-delay="0.4s">
                         <a href="syte.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -266,7 +293,7 @@ gtag('config', 'G-XXXXXXX');
                     <!-- end portfolio item -->
 
                     <!-- start portfolio item -->
-                    <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                    <li class="grid-item grid-item-double filmi_ja_videotöötlus wow animate__fadeInUp">
                         <a href="reeklaamvideo.html">
                             <figure>
                                 <div class="portfolio-img"><img
