--- a/ajakiri.html
+++ b/ajakiri.html
@@ -62,11 +62,17 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükis &nbsp;&nbsp; • &nbsp;&nbsp; Kooli tööd 2021 / 2022</span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Ajakiri &nbsp;&nbsp; • &nbsp;&nbsp; Kooli tööd 2021 / 2022</span>
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Ametikool 100 ajakiri</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>5. novembril 2022 tähistatakse Kuressaare ametikooli 100. sünnipäeva. Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt Ametikool 100 ajakirja kujundamise. Minu ülesanne oli kujundada esikaas. Esikaane kujundamisel kasutasin kooli ametlikke värve. Enda kujundusega soovin edasi anda kooli mitmekülgsust ning mängulist ja avatud mõttelaadiga koolikeskkonda. </p>
+                        <p>5. novembril 2022 tähistatakse Kuressaare ametikooli 100. sünnipäeva. Juubeliaasta tähistamiseks tellis Kuressaare ametikool meie õpperühmalt 
+                            Ametikool 100 ajakirja kujundamise. Minu ülesanne oli kujundada esikaas. Esikaane kujundamisel kasutasin kooli ametlikke värve. Enda kujundusega 
+                            soovin edasi anda kooli mitmekülgsust ning mängulist ja avatud mõttelaadiga koolikeskkonda. 
+
+                            Teine ülesanne oli kujundada “Mida põnevat teha Kuressaares”.  Eesmärk on tekitada huvi uutele õpilastele Kuressaare avastamisel. Kujundus on väga minimaalistik, värvidest kasutasin ametikooli ametlike värve millest tegin  grateiendi. 
+                            
+                            Kolmas ülsanne oli kujundada ja külendada tehnoologia juhtõpetaja Andres Meisterson intervjuu. Valisin olulise info ja lisasin illuteeriva joonistus õpetajast . Roheline värviga on meil ajakirjas defineeritud tehnoloogiamajaka värvus.  </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
