--- a/index.html
+++ b/index.html
@@ -38,7 +38,35 @@ gtag('config', 'G-XXXXXXX');
 </script>
 
 </head>
-
+<body class="w-100">
+    <!-- start header -->
+    <header>
+        <!-- start navigation -->
+        <nav class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
+            <div class="container-fluid nav-header-container h-100px sm-h-70px">
+                <!-- start header navigation -->
+                <!-- <div class="col d-none d-md-block text-start ps-0">
+                            <div class="header-social-icon border-none no-padding-left no-margin-left">
+                                <a href="https://www.facebook.com/" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://twitter.com/" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="https://dribbble.com/" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>                          
+                            </div>
+                        </div> -->
+                <!-- start logo -->
+                <div class="col text-md-left pl-0 pl-md-3">
+                    <a class="logo" href="index.html"><img
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            class="default" alt="Oliver Juss"></a>
+                </div>
+                <!-- end logo -->
+    
+            </div>
+            <!-- End Header Navigation -->
+        </nav>
+        <!-- end navigation -->
+    </header>
+    <!-- end header -->
 
 <!-- start hero section -->
 <section class="wow animate__fadeIn p-0 mobile-height parallax" data-parallax-background-ratio="0.5"
@@ -359,7 +387,7 @@ gtag('config', 'G-XXXXXXX');
                         </a>
                     </li>
                      <!-- start portfolio item -->
-                     <!-- <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                     <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
                         <a href="mai_hindamis_t66d.html">
                             <figure>
                                 <div class="portfolio-img"><img
@@ -377,7 +405,7 @@ gtag('config', 'G-XXXXXXX');
                                 </figcaption>
                             </figure>
                         </a>
-                    </li> -->
+                    </li>
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
                     <!-- end portfolio item -->
