--- a/kuressaare_reis.html
+++ b/kuressaare_reis.html
@@ -66,8 +66,8 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Kuressaare reis</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülesanne oli vabalt valitud video põhjal teha animatsiooni klipp. Videoks valisin kolm meest, kes tantsivad ja
-                        animeerisin nende erinevaid tantsukombinatsioone.</p>
+                        <p>Ülesanne oli teha video õppekäigust kus me sõitsime ümber Kuressaare. Monteerisin video erinevatest klippidest kokku ja lisasin muusika,
+                            mis looks meeldiva meeleolu. Õpsin väga palju kuidas AdobePremiere Pro töötab ja sain hea kogemuse. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
