--- a/syte.html
+++ b/syte.html
@@ -66,11 +66,9 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top"> Õpilasfirma Syte koduleht</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Osalemine õpilasfirmas andis hea kogemuse. Sain teada oma tugevustest ja nõrkustest. Pean arendama enda meeskonnatöö oskust.  
-                        Välakutsuv oli minu jaoks meeskonnas suhtlemine ja enesekehtestamine. Minu üheks tugevuseks on iseseisvalt töötamine ja tähtaegadest kinnipidamine.
-                         Peamiseks ülesandeks õpilasfirmas oli kodulehe kujundamine. Õppisin väga palju, kuidas teha kodulehe prototüüp ning hiljem  disainida õpilasfirma koduleht. 
-                         Sellega kaasnes palju iseseisvat õppimist ja HTML ning CSS programmeerimimise keelega töötamist. Peale kodulehe sain ka mõningaid kujundusi proovida - näiteks 
-                         discgolfi ketastele kujunduse tegemine.</p>
+                        <p>Osalemine õpilasfirmas andis hea kogemuse.  Peamiseks minu ülesandeks õpilasfirmas oli Syte kodulehe kujundamine. Õppisin väga palju, 
+                            kuidas teha kodulehe prototüüp ning hiljem disainida õpilasfirma koduleht. Sellega kaasnes palju iseseisvat õppimist ja HTML ning
+                             CSS programmeerimimise keeltega töötamist. Peale kodulehe sain ka mõningaid kujundusi proovida - näiteks discgolfi ketastele kujunduse tegemine. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
