--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -115,19 +115,7 @@ gtag('config', 'G-XXXXXXX');
                 <ul
                     class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
                     <li class="nav active"><a href="javascript:void(0);" data-filter="*"
-                            class="light-gray-text-link text-very-small">Kõik</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".õpilasfirma"
-                            class="light-gray-text-link text-very-small">Ettevõtluspraktika/ Õpilasfirma</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".firmagraafik"
-                            class="light-gray-text-link text-very-small">Firmagraafika</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".trükiettevalmistus"
-                            class="light-gray-text-link text-very-small">Trükiettevalmistus</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".filmi_ja_videotöötlus"
-                            class="light-gray-text-link text-very-small">Filmi ja videotöötlus</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".tootefoto_ja_pilditöötlus"
-                            class="light-gray-text-link text-very-small">Tootefoto ja pilditöötlus</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".ajakiri"
-                            class="light-gray-text-link text-very-small">Ajakiri</a></li>
+                            class="light-gray-text-link text-extra-large">Hindamine kevad 2022</a></li>
                  
                 </ul>
                 <!-- end filter navigation -->
