--- a/cv_video.html
+++ b/cv_video.html
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; 	Filmi- ja videotöötlus</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">CV video</video></h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Elulookirjelduse video </video></h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Ülessanne oli teha enda elulookirjelduse video, kus ma tuvustasi ennast ja kirjeldasin enda erialaseid oslusi. Videosse lisasin ka graafilisi elemente: 
@@ -74,7 +74,7 @@
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Tunnitöö</label></li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Valmar Voolaid</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>CV video</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Elulookirjelduse video </li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 mai</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
