--- a/reeklaamvideo.html
+++ b/reeklaamvideo.html
@@ -63,11 +63,11 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; 	Filmi- ja videotöötlus</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Reeklaamvideo eriala kohta</video></h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Reeklaamvideo kujundusgraafiku erialale </video></h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Ülesaane oli teha reklaamvideo kujundusgraafiku eriala. Monteerisin kokku oma grupi poolt filmitud materjali ja lisasime muusika. 
-                            See oli minu tein kasutas Premiere pro programmiga. Õpsin väga palju  uusi oskusi ja teadmiseid, kuidas Premiere Pro töötab </p>
+                            See oli minu teine katsetus Premiere pro programmiga. Õpsin väga palju  uusi oskusi ja teadmiseid, kuidas Premiere Pro töötab. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
