--- a/reeklaamvideo.html
+++ b/reeklaamvideo.html
@@ -66,7 +66,7 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Reklaamvideo kujundusgraafiku erialale </video></h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülesanne oli teha reklaamvideo kujundusgraafiku eriala. Monteerisin kokku oma grupi poolt filmitud materjali ja lisasime muusika. 
+                        <p>Ülesanne oli teha reklaamvideo kujundusgraafiku eriala. Monteerisin kokku oma grupi poolt filmitud materjali ja lisasin muusika. 
                             See oli minu teine katsetus Premiere Pro programmiga. Õpsin väga palju  uusi oskusi ja teadmiseid, kuidas Premiere Pro töötab. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
