--- a/reeklaamvideo.html
+++ b/reeklaamvideo.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Ülesanne oli teha reklaamvideo kujundusgraafiku eriala. Monteerisin kokku oma grupi poolt filmitud materjali ja lisasin muusika. 
-                            See oli minu teine katsetus Premiere Pro programmiga. Õppsin väga palju  uusi oskusi ja teadmiseid, kuidas Premiere Pro töötab. </p>
+                            See oli minu teine katsetus Premiere Pro programmiga. Sain väga palju  uusi oskusi ja teadmiseid, kuidas Premiere Pro töötab. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
