--- a/ajakiri.html
+++ b/ajakiri.html
@@ -70,16 +70,16 @@
                             Ametikool 100 ajakirja kujundamise. Minu ülesanne oli kujundada esikaas. Esikaane kujundamisel kasutasin kooli ametlikke värve. Enda kujundusega 
                             soovin edasi anda kooli mitmekülgsust ning mängulist ja avatud mõttelaadiga koolikeskkonda. 
 
-                            Teine ülesanne oli kujundada “Mida põnevat teha Kuressaares”.  Eesmärk on tekitada huvi uutele õpilastele Kuressaare avastamisel. Kujundus on väga minimaalistik, värvidest kasutasin ametikooli ametlike värve millest tegin  grateiendi. 
+                            Teine ülesanne oli kujundada “Mida põnevat teha Kuressaares”.  Eesmärk on tekitada huvi uutele õpilastele Kuressaare avastamisel. Kujundus on väga minimaalistik, värvidest taas kasutasin ametikooli ametlikke värve millest tegin  gradeiendi. 
                             
-                            Kolmas ülsanne oli kujundada ja külendada tehnoologia juhtõpetaja Andres Meisterson intervjuu. Valisin olulise info ja lisasin illuteeriva joonistus õpetajast . Roheline värviga on meil ajakirjas defineeritud tehnoloogiamajaka värvus.  </p>
+                            Kolmas ülsanne oli kujundada ja külendada tehnoologia juhtõpetaja Andres Meisterson intervjuu. Valisin olulise info ja lisasin illusteriva joonistuse õpetajast. Roheline värviga on meil ajakirjas defineeritud tehnoloogiamajaka värviks.  </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressaare Ametikool</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Tiiu Tuhkanen</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Kujundada ajakirjale esikaas</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Oktoober 2021</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Ajakirja kujundus</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Aprill 2022</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                         </ul>
                     </div>
