--- a/ajakiri.html
+++ b/ajakiri.html
@@ -72,7 +72,8 @@
 
                             Teine ülesanne oli kujundada “Mida põnevat teha Kuressaares”.  Eesmärk on tekitada huvi uutele õpilastele Kuressaare avastamisel. Kujundus on väga minimaalistik, värvidest taas kasutasin ametikooli ametlikke värve millest tegin  gradeiendi. 
                             
-                            Kolmas ülsanne oli kujundada ja külendada tehnoologia juhtõpetaja Andres Meisterson intervjuu. Valisin olulise info ja lisasin illusteriva joonistuse õpetajast. Roheline värviga on meil ajakirjas defineeritud tehnoloogiamajaka värviks.  </p>
+                            Kolmas ülsanne oli kujundada ja külendada tehnoologia juhtõpetaja Andres Meisterson intervjuu. Valisin olulise info ja lisasin 
+                            illustreeriva joonistuse õpetajast. Roheline värviga on meil ajakirjas defineeritud tehnoloogiamajaka värviks.  </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
