--- a/Elisabeth_Ellinorile_logo.html
+++ b/Elisabeth_Ellinorile_logo.html
@@ -70,7 +70,7 @@
                         Logo sümboolikas võtsin aluseks viikingi sümboli, mis tähendab “loo oma reaalsus”. Oma kujunduses lähtusin minimalismist ning erinevatest lihtsatest sümbolitest. 
                         Kaks üles suunatud noolt tähendavad võitu ja kasvamist. Samas meenutavad need mägesid ja looduslähedust. Nool kui sümbol viitab avatusele uutele kogemusele, 
                         tugevust, julgust, keskendumist ja kavalust ning võimet suhelda ja liikuda vajadusel väga kiiresti. Ring ümber viikingi sümboli näitab pidevat liikumist ja ühtlasi
-                         on ka päikese ning täiuslikkuse sümbol. Samas on ka ring harmoonia sümbol, mis rahustab ja tasakaalustab logo  </p>
+                         on ka päikese ning täiuslikkuse sümbol. Samas on ka ring harmoonia sümbol, mis rahustab ja tasakaalustab logo. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
