--- a/cv_video.html
+++ b/cv_video.html
@@ -66,9 +66,10 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Elulookirjelduse video </video></h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Ülessanne oli teha enda elulookirjelduse video, kus ma tuvustasi ennast ja kirjeldasin enda erialaseid oslusi. Videosse lisasin ka graafilisi elemente: 
+                        <p>Ülessanne oli teha enda elulookirjelduse video, kus ma tutvustasin ennast ja kirjeldasin enda erialaseid oskusi. Videosse lisasin ka graafilisi elemente: 
                             minu portfoolio QR koodiga ja teine oli milline peab olema hea kujundusgraafik. Animatsioonide tegemiseks ma kasutasin Adobe After Effetci.See oli minu 
-                            esimene kogemus selle programmigama, sain hea kogemuse kuidas teha animtsioone ja hiljem neid eksportida  Adobe Premiere Pro programmi. </p>
+                            esimene kogemus selle programmigama, sain hea kogemuse kuidas teha 
+                            animatsioone ja hiljem neid eksportida  Adobe Premiere Pro programmi. </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
@@ -223,37 +224,7 @@
             </div>
         </section> -->
         <!-- end image gallery section -->
-        <!-- start blog navigation bar section -->
-        <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
-            <div class="container-fluid p-0">
-                
-                <!-- next and previous projcet stat -->
-                <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
-                    <div class="w-45 text-start">
-                        <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
-                            <a href="koolitusmajakas.html">
-                                <i class="ti-arrow-left blog-nav-icon"></i>
-                               *
-                            </a>
-                        </div>
-                    </div>
-                    <!-- <div class="w-10 text-center">
-                        <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
-                    </div> -->
-                    <div class="w-45 text-end">
-                        <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
-                            <a href="piktogrammid.html">
-                                <i class="ti-arrow-right blog-nav-icon"></i>
-                              *
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end blog navigation bar section -->
+       
 
         <!-- start footer --> 
         <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
