--- a/postkaard.html
+++ b/postkaard.html
@@ -66,11 +66,10 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Akrokefaalia postkaard</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Lähteülesannet: Kujunda keraamiku Tiiu Salus-Aua tootefotodest  postkaart  ning esita see trükikõlbuliku PDF`ina ja väljaprindina.
-                            <br>Postkaardi eesmärk: on tutvustada keraamiku/kunstniku loomingut. 
-                            Postkaart on üks lihtsaim info- ja reklaamijagamise viise, mida saab saata nii posti teel, kui ka edastada käest kätte. 
+                        <p>
+                            <br>Postkaardi eesmärk: on tutvustada keraamiku/kunstniku loomingut.  
                             Kaardi levitamise võimalused on koolid, messid, kunstigaleriid, ametiasutused, partnerettevõtetele
-                            <br> Minu kujundus: Oma kujundusega soovin rõhutada rakupõletus tehnikas valmistatud keeramilisi päid.  
+                            <br> Oma kujundusega soovin rõhutada rakupõletus tehnikas valmistatud keeramilisi päid.  
                             Põhitooniks valisin halli, et tuua paremini välja fotodel kuvatud töid. Teksti värviks valisin valge ja fondiks minimalistliku
                             stiili. Oranž värv fotol on sobivaks aksendiks minu loodud kujundusele.
                     </div>
@@ -228,37 +227,7 @@
             </div>
         </section> -->
         <!-- end image gallery section -->
-        <!-- start blog navigation bar section -->
-        <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
-            <div class="container-fluid p-0">
-                
-                <!-- next and previous projcet stat -->
-                <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
-                    <div class="w-45 text-start">
-                        <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
-                            <a href="koolitusmajakas.html">
-                                <i class="ti-arrow-left blog-nav-icon"></i>
-                                *
-                            </a>
-                        </div>
-                    </div>
-                    <!-- <div class="w-10 text-center">
-                        <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
-                    </div> -->
-                    <div class="w-45 text-end">
-                        <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
-                            <a href="piktogrammid.html">
-                                <i class="ti-arrow-right blog-nav-icon"></i>
-                                *
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- end blog navigation bar section -->
+        
 
         <!-- start footer --> 
         <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
