--- a/postkaard.html
+++ b/postkaard.html
@@ -77,7 +77,7 @@
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Tiiu Salus-Aua</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Anželika Toll</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Tiiu Salus-Aua postkaard</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Tiiu Salus-Aua postkaart</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 talv</li>
                             <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                         </ul>
