--- a/index.html
+++ b/index.html
@@ -387,25 +387,27 @@ gtag('config', 'G-XXXXXXX');
                         </a>
                     </li>
                      <!-- start portfolio item -->
-                     <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                     <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
                         <a href="mai_hindamis_t66d.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652800785/Koduleht/nora_logo_smncfm.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652854290/Koduleht/ametikooli100_esikaas_wmtpr7.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Mai hindamis tööd</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Koolitööd</p>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">HINDAMINE KEVAD 2022</span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis ja
+                                                Disain</p>
                                         </div>
                                     </div>
                                 </figcaption>
                             </figure>
                         </a>
                     </li>
+                    <!-- end portfolio item -->
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
                     <!-- end portfolio item -->
