Jäätise lehe lisamine ja tekstite parandamine

--- a/j22tis.html
+++ b/j22tis.html
@@ -64,26 +64,27 @@
             <div class="row">
                 <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                     <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Kooli
-                        tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; Veebigraafika</span>
+                        tööd 2021 / 2022 &nbsp;&nbsp; • &nbsp;&nbsp; Vormiõpetus ja 3D alused</span>
                     <h1
                         class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">
-                        Figma prototüüp </video></h1>
+                        Jäätis</h1>
                 </div>
                 <div
                     class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                    <p>Ülesanne oli teha videomatejali baasil Figmas prototüüp. Mulle meeldis, et sain nokitseda omas
-                        tempos. Kuigi olen mitmel korral eelnevalt Figmas töötanud siis sain mitu vajalikku oskust
-                        juurde ning tuletasin eelnevalt õpitut meelde. See oli hea kogemus, sest tulevikus kus enamus
-                        ettevõtteid on kolinud interneti avarustesse tuleb selline oskus kasuks. </p>
+                    <p>Ülesanne oli teha 3D programmis Blender pulgajäätis. Jäätise modelleerimisel kasutasin
+                        videomaterjali abi. Kuna olen eelnevalt mitmeid kordi Blenderiga kokkupuutunud siis valmis
+                        jäätise modelleerimine kiiresti ja raske see minu jaoks polnud. Kuna igapäevaselt ma Blenderit
+                        ei kasuta siis oli heaks meenutuseks kuidas Blender töötab. </p>
                 </div>
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Tunnitöö</label></li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Tiiu Tuhkanen
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Henri Tolli
                         </li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>
-                            Figma prototüüp</li>
-                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 mai</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Modelleerida
+                            Blendris
+                            jäätis</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>2022 aprill</li>
                         <!-- <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li> -->
                     </ul>
                 </div>
@@ -96,23 +97,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <video controls autoplay loop
-                        src="https://res.cloudinary.com/dxxjplpwo/video/upload/v1653814410/Koduleht/Screen_Recording_2022-05-29_at_11.49.28_AM_x55eaz.mov"
-                        class="w-100 " alt="" />
+                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1653817624/Koduleht/Oliver_jaatis2_uya13f.jpg"
+                        class="w-100" alt="" />
                 </div>
-                <div class="row">
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1653811469/Koduleht/WF_V2_qqprfq.jpg"
-                            class="w-100 " alt="" />
-                    </div>
-                    <div class="row">
-                        <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                            <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1653815629/Koduleht/WF_V3_zqvjcl.jpg"
-                                class="w-100 " alt="" />
-                        </div>
 
-                    </div>
-                </div>
+            </div>
+        </div>
     </section>
     <!-- end gallery section -->
     <!-- start gallery section -->
