--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -344,6 +344,29 @@
                             </a>
                         </li>
                         <!-- end portfolio item -->
+                        <!-- start portfolio item -->
+                        <li class="grid-item grid-item-double filmi_ja_videotöötlus wow animate__fadeInUp"
+                            data-wow-delay="0.4s">
+                            <a href="j22tis.html">
+                                <figure>
+                                    <div class="portfolio-img"><img
+                                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1653817624/Koduleht/Oliver_jaatis2_uya13f.jpg"
+                                            alt="" /></div>
+                                    <figcaption>
+                                        <div class="portfolio-hover-main">
+                                            <div class="portfolio-hover-box align-middle">
+                                                <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
+                                                <span
+                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Jäätis</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">
+                                                    Vormiõpetus ja 3D alused</p>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </li>
+                        <!-- end portfolio item -->
 
 
                         <!-- <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
