tööde lehtedele lisamine footer ja indexil footer loogo väiksemaks tegemine

--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
                                             <div class="portfolio-hover-box align-middle">
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
-                                                    class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">
-                                                    <Oliver Juss logo</span>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Oliver Juss Logo</span>
                                                         <p class="no-letter-spacing text-small mb-0 text-medium-gray">
                                                             Logo ja Disain</p>
                                             </div>
