--- a/piktogrammid.html
+++ b/piktogrammid.html
@@ -227,39 +227,76 @@
             </div>
         </section> -->
         <!-- end image gallery section -->
-        <!-- start blog navigation bar section -->
-        <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
-            <div class="container-fluid p-0">
-                
-                <!-- next and previous projcet stat -->
-                <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
-                    <div class="w-45 text-start">
-                        <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
-                            <a href="kalender.html">
-                                <i class="ti-arrow-left blog-nav-icon"></i>
-                                Kustikalender
-                            </a>
-                        </div>
-                    </div>
-                    <!-- <div class="w-10 text-center">
-                        <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
-                    </div> -->
-                    <div class="w-45 text-end">
-                        <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
-                            <a href="spordibanner.html">
-                                <i class="ti-arrow-right blog-nav-icon"></i>
-                                Spordi bänner
-                            </a>
-                        </div>
+                   <!-- start footer -->
+    <footer class="footer-center-logo padding-five-tb sm-padding-30px-tb">
+        <div class="container">
+            <div class="row align-items-center">
+                <!-- start copyright -->
+                <div class="col-lg-4 col-md-5 text-small text-center alt-font sm-margin-15px-bottom">
+                    &COPY; Kõik õigused kaitstud 2022 <a href="#" target="_blank"
+                        title=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; oliver.juss@ametikool.ee
+                </div>
+                <!-- end copyright -->
+                <!-- start logo -->
+                <div class="col-lg-4 col-md-2 text-center sm-margin-10px-bottom">
+                    <a href="index.html"><img class="footer-logo"
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            data-at2x="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642959744/Koduleht/Asset_1_my4eql.svg"
+                            alt="Portfolio"></a>
+                </div>
+                <!-- end logo -->
+                <!-- start social media -->
+                <div class="col-lg-4 col-md-5 text-center">
+                    <span class="alt-font text-small margin-10px-right md-margin-5px-right"> +372 5668 1811</span>
+
+                    <div class="social-icon-style-8 d-inline-block align-middle">
+                        <ul class="small-icon mb-0">
+                            <li><a class="facebook" href="#" target="_blank"><i class="fab fa-facebook-f"
+                                        aria-hidden="true"></i></a></li>
+                            <li><a class="twitter" href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a class="google" href="#" target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a class="instagram" href="#" target="_blank"><i class="fab fa-instagram me-0"
+                                        aria-hidden="true"></i></a></li>
+                        </ul>
                     </div>
                 </div>
+                <!-- end social media -->
             </div>
-        </section>
-        <!-- end blog navigation bar section -->
-
+        </div>
+    </footer>
         <!-- start footer --> 
+
+                <!-- start blog navigation bar section -->
+                <section class="wow animate__fadeIn p-0">
+                    <div class="container-fluid p-0">
+                        
+                        <!-- next and previous projcet stat -->
+                        <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
+                            <div class="w-45 text-start">
+                                <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
+                                    <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
+                                    <a href="meny.html">
+                                        <i class="ti-arrow-left blog-nav-icon"></i>
+                                        Menüü
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- <div class="w-10 text-center">
+                                <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
+                            </div> -->
+                            <div class="w-45 text-end">
+                                <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
+                                    <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
+                                    <a href="kalender.html">
+                                        <i class="ti-arrow-right blog-nav-icon"></i>
+                                        Kustikalender
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- end blog navigation bar section -->
         <!-- <footer class="footer-classic-dark bg-extra-dark-gray padding-five-bottom sm-padding-30px-bottom">
             <div class="bg-dark-footer padding-50px-tb sm-padding-30px-tb">
                 <div class="container">
